@@ -1,6 +1,8 @@
 2012-02-24
 * split caching database per language family
 * determine version based on strings extracted from the binary
+* determine licenses based on strings extracted from the binary plus a large
+database of licenses extracted from source code using Ninka
 
 2012-02-23
 * start moving maintenance scripts into the 'maintenance' directory
